[gd_scene load_steps=13 format=3 uid="uid://f7you6f3klj0"]

[ext_resource type="Script" path="res://scripts/login_script/student_register.gd" id="1_3k471"]
[ext_resource type="Script" path="res://scripts/login_script/soln_bg_animation.gd" id="1_lpcqc"]
[ext_resource type="Texture2D" uid="uid://c6dgj1k2tddmy" path="res://assets/background/Lighthouse_movement.png" id="2_xd708"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="3_hu7dh"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_1bv1d"]
[ext_resource type="PackedScene" uid="uid://bcui7ofr241ek" path="res://scenes/student_scene/hide_password.tscn" id="5_w83xd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ciok"]
atlas = ExtResource("2_xd708")
region = Rect2(0, 0, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7c3h"]
atlas = ExtResource("2_xd708")
region = Rect2(0, 281, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrwxq"]
atlas = ExtResource("2_xd708")
region = Rect2(0, 562, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3miy"]
atlas = ExtResource("2_xd708")
region = Rect2(0, 843, 510, 281)

[sub_resource type="SpriteFrames" id="SpriteFrames_4mjwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ciok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7c3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrwxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3miy")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4jqm"]

[node name="StudentRegister" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3k471")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.46513, 4.57422)
metadata/_edit_use_anchors_ = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="Panel"]
texture_filter = 1
scale = Vector2(1.00145, 1.00297)
script = ExtResource("1_lpcqc")

[node name="Soln_background" type="AnimatedSprite2D" parent="Panel/CharacterBody2D"]
position = Vector2(78.7705, 61.4673)
scale = Vector2(0.308026, 0.438708)
sprite_frames = SubResource("SpriteFrames_4mjwi")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/CharacterBody2D"]
visible = false
position = Vector2(75.0395, 166.771)
shape = SubResource("RectangleShape2D_h4jqm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(509, 283)

[node name="StudentInformation" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 111.0
offset_right = 1217.0
offset_bottom = 686.999

[node name="IPAddress" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 627.0
offset_top = 80.0
offset_right = 865.0
offset_bottom = 111.0
scale = Vector2(0.99258, 0.982386)
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "IP Address"
caret_blink = true

[node name="FirstName" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 344.0
offset_top = 130.0
offset_right = 582.0
offset_bottom = 161.0
scale = Vector2(0.99258, 0.982386)
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "First Name"
caret_blink = true

[node name="LastName" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 347.0
offset_top = 186.0
offset_right = 584.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "Last Name"
caret_blink = true

[node name="Username" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 348.0
offset_top = 245.0
offset_right = 585.0
offset_bottom = 276.0
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "Username"
caret_blink = true

[node name="ClassNumber" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 623.0
offset_top = 126.0
offset_right = 861.0
offset_bottom = 157.0
scale = Vector2(0.99258, 0.982386)
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "Class Number"
caret_blink = true

[node name="ClassSection" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 622.0
offset_top = 184.0
offset_right = 862.0
offset_bottom = 215.0
scale = Vector2(0.99258, 0.982386)
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "Class Section"
caret_blink = true

[node name="Password" type="LineEdit" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 622.0
offset_top = 245.0
offset_right = 860.0
offset_bottom = 276.0
scale = Vector2(0.99258, 0.982386)
theme_override_fonts/font = ExtResource("3_hu7dh")
placeholder_text = "Password"
caret_blink = true
secret = true

[node name="HidePassword" parent="StudentInformation/Password" instance=ExtResource("5_w83xd")]
layout_mode = 0
offset_left = 192.428
offset_top = 2.03586
offset_right = 236.428
offset_bottom = 26.0359

[node name="StudentRegister" type="RichTextLabel" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 345.0
offset_top = 86.0
offset_right = 587.0
offset_bottom = 126.0
theme_override_fonts/normal_font = ExtResource("4_1bv1d")
text = "Student Register"

[node name="RegisterButton" type="Button" parent="StudentInformation"]
texture_filter = 1
layout_mode = 0
offset_left = 526.0
offset_top = 295.0
offset_right = 691.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("4_1bv1d")
text = "Register"
flat = true

[node name="ErrorLabelUsername" type="RichTextLabel" parent="."]
self_modulate = Color(0.576471, 0.247059, 0.270588, 1)
offset_left = 511.0
offset_top = 396.0
offset_right = 733.0
offset_bottom = 422.0
theme_override_fonts/normal_font = ExtResource("3_hu7dh")
scroll_active = false

[connection signal="button_down" from="StudentInformation/RegisterButton" to="." method="_on_register_button_button_down"]
